# 1brc

./: .gitignore  Cargo.toml  README.md
1brc-single-thread/: Cargo.toml
1brc-single-thread/src/: chunk_builder.rs  main.rs
1brc-single-thread/src/file/: chunk.rs  mod.rs  sample.rs
1brc-single-thread/src/iter/: line_chunks.rs  mod.rs  raw_records.rs
1brc-single-thread/src/record/: collection.rs  hash.rs  map.rs  mod.rs  raw.rs  record.rs  records.rs
create-sample/: Cargo.toml
create-sample/src/: lib.rs  main.rs  random.rs
hash_test/: Cargo.toml
hash_test/src/: main.rs
src/: chunks.rs  hash.rs  hash_table.rs  iter_city.rs  main.rs  record.rs  util.rs
src/iter/: city_temperatures.rs  mod.rs  raw_records.rs
src/record/: collection.rs  mod.rs  raw.rs  record.rs  records.rs
src/util/: find.rs  mod.rs  seek.rs  seek_helper.rs  temperature.rs
